--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Radio+Canada:wght@300;400;500&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Radio Canada', sans-serif;
 }
 body{
     display: flex;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
-
+    width: 100%;
 }
 .gpay-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: .5;
     width: 100%;
+}
+.circle{
+    width: 100%;
+}
+
+.circle svg{
+    margin-top: 15vh;
+    margin-left: 2.5rem;
+    width: 28vw;
+    aspect-ratio: 1;
+    background: #1766D0;
+    border-radius: 50%;
+    padding: 5.6rem;
 }
