--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 .circle svg{
     margin-top: 28.5vh;
     margin-left: 2.5rem;
-    width: 28vw;
+    height: 10vh;
     aspect-ratio: 1;
     background: #1766D0;
     border-radius: 50%;
