--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body{
     margin-top: 28.5vh;
     /* margin-left: 2.5rem; */
     aspect-ratio: 1;
-    height: 5vh;
+    height: 10vh;
     background: #1766D0;
     border-radius: 50%;
-    padding: 5.6rem;
+    padding: 4vh;
 }
