--- a/style.css
+++ b/style.css
@@ -17,18 +17,19 @@ body{
     left: 0;
     opacity: .5;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 .circle{
     width: 100%;
 }
 
 .circle svg{
-    margin-top: 28.5vh;
-    /* margin-left: 2.5rem; */
-    aspect-ratio: 1;
-    height: 10vh;
+    margin-top: 26.8vh;
+    margin-left: .8rem;
+    /* aspect-ratio: 1; */
+    height: 13vh;
+    width: 13vh;
     background: #1766D0;
     border-radius: 50%;
-    padding: 4vh;
+    padding: 3.5vh;
 }
