--- a/style.css
+++ b/style.css
@@ -25,11 +25,29 @@ body{
 
 .circle svg{
     margin-top: 29vh;
-    margin-left: .8rem;
+    /* margin-left: .8rem; */
     /* aspect-ratio: 1; */
     height: 13.2vh;
     width: 13.2vh;
     background: #1766D0;
     border-radius: 50%;
     padding: 3.2vh;
+}
+.info{
+    margin-top: 8.6rem;
+    text-align: center;
+}
+.rupees{
+    color: #222;
+    font-size: 40px;
+    font-weight: 400;
+}
+.service{
+    margin-top: 1.3rem;
+    font-size: 22px;
+}
+.name{
+    font-size: 18px;
+    margin-top: .3rem;
+    color: rgb(59, 59, 59)
 }
