--- a/style.css
+++ b/style.css
@@ -28,14 +28,14 @@ body{
 .circle svg{
     margin-top: 29vh;
     margin-left: .6rem;
-    height: 13.2vh;
-    width: 13.2vh;
+    height: 13.4vh;
+    width: 13.4vh;
     background: #1766D0;
     border-radius: 50%;
     padding: 3.2vh;
 }
 .info{
-    margin-left: .4px;
+    margin-left: .8px;
     margin-top: 4.8rem;
     text-align: center;
 }
@@ -46,10 +46,27 @@ body{
 }
 .service{
     margin-top: 1.3rem;
-    font-size: 20px;
+    font-size: 18px;
 }
 .name{
-    font-size: 18px;
+    font-size: 1p6x;
     margin-top: .3rem;
     color: rgb(59, 59, 59)
+}
+.footer{
+    text-align:  center;
+    margin-top: 10rem;
+}
+.footer p{
+    font-size: 18px;
+}
+.footer button{
+    margin-top: 2rem;
+    border: 1px solid #333;
+    color:#1766D0;
+    padding: 10px 20px;
+    border-radius: 1.3rem;
+    background: none;
+    font-size: 18px;
+    outline: none;
 }
