--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
     padding: 3.2vh;
 }
 .info{
-    margin-left: .8px;
+    margin-left: 4px;
     margin-top: 4.8rem;
     text-align: center;
 }
@@ -55,13 +55,13 @@ body{
 }
 .footer{
     text-align:  center;
-    margin-top: 10rem;
+    margin-top: 7rem;
 }
 .footer p{
-    font-size: 18px;
+    font-size: 15px;
 }
 .footer button{
-    margin-top: 2rem;
+    margin-top: 1rem;
     border: 1px solid #333;
     color:#1766D0;
     padding: 10px 20px;
