--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 .info{
     margin-left: 4px;
-    margin-top: 4.8rem;
+    margin-top: 5rem;
     text-align: center;
 }
 .rupees{
@@ -45,11 +45,11 @@ body{
     font-weight: 400;
 }
 .service{
-    margin-top: 1.3rem;
+    margin-top: 1.1rem;
     font-size: 18px;
 }
 .name{
-    font-size: 1p6x;
+    font-size: 16px;
     margin-top: .3rem;
     color: rgb(59, 59, 59)
 }
@@ -61,10 +61,10 @@ body{
     font-size: 15px;
 }
 .footer button{
-    margin-top: 1rem;
+    margin-top: 1.2rem;
     border: 1px solid #333;
     color:#1766D0;
-    padding: 8px 20px;
+    padding: 9px 24px;
     border-radius: 1.3rem;
     background: none;
     font-size: 14px;
