--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
 }
 .info{
     margin-left: 4px;
-    margin-top: 5rem;
+    margin-top: 5.1rem;
     text-align: center;
 }
 .rupees{
@@ -50,7 +50,7 @@ body{
 }
 .name{
     font-size: 16px;
-    margin-top: .3rem;
+    margin-top: .2rem;
     color: rgb(59, 59, 59)
 }
 .footer{
@@ -58,10 +58,11 @@ body{
     margin-top: 9rem;
 }
 .footer p{
+    margin-left: 8px;
     font-size: 15px;
 }
 .footer button{
-    margin-top: 1.2rem;
+    margin-top: 1.4rem;
     border: 1px solid #333;
     color:#1766D0;
     padding: 9px 24px;
