--- a/style.css
+++ b/style.css
@@ -5,25 +5,28 @@
     box-sizing: border-box;
     font-family: 'Radio Canada', sans-serif;
 }
+button{
+    cursor: pointer;
+}
 
 
 /* ---------------------Home---------------------------- */
 
  .home-page{
+     margin-top: 4rem;
      display: flex;
-     align-items: center;
-     justify-content: center;
      flex-direction: column;
+     align-items: center;
      height: 100vh;
  }
 
  .home-page input{
-     width: 80%;
+     width: 90%;
      margin: 1rem auto;
-     border: 2px solid #333;
-     border-radius: 1.3rem;
+     border: 1.5px solid rgb(92, 92, 92);
+     border-radius: .5rem;
      height: 3rem;
-     font-size: 24px;
+     font-size: 30px;
      padding: 2rem;
      text-align: center;
      outline: none;
@@ -34,7 +37,7 @@
     background: #1766D0;
     color: #fff;
     padding: 9px 60px;
-    border-radius: 1.3rem;
+    border-radius: .5rem;
     font-size: 25px;
     outline: none;
  }
@@ -46,13 +49,15 @@ body{
     min-height: 100vh;
     width: 100%;
 }
+.page{
+    display: none;
+}
 .gpay-img{
     position: absolute;
     top: 0;
     left: 0;
     opacity: .5;
     width: 100%;
-    /* height: 100vh; */
 }
 .circle{
     width: 100%;
@@ -91,6 +96,7 @@ body{
 .footer{
     text-align:  center;
     margin-top: 9rem;
+    margin-bottom: 1rem;
 }
 .footer p{
     margin-left: 8px;
