--- a/style.css
+++ b/style.css
@@ -113,3 +113,20 @@ body{
     font-size: 14px;
     outline: none;
 }
+.videobox{
+    overflow-x: hidden;
+    position: absolute;
+    top: 0;
+    max-width: 400px;
+    margin: 0 auto;
+    left: center;
+    display: flex;
+    justify-content: center;
+    display: none;
+    align-self: center;
+}
+.gvideo{
+    width: 100%;
+    transform: scale(1.1);
+    transform: translateX(4px);
+}
