--- a/style.css
+++ b/style.css
@@ -114,19 +114,19 @@ body{
     outline: none;
 }
 .videobox{
+    min-height: 1200px;
     overflow: hidden;
     position: absolute;
     top: 0;
-    max-width: 400px;
-    margin: 0 auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-self: center;
     display: none;
+    border: solid;
 }
 .gvideo{
     height: 100vh;
     width: 100%;
-    opacity: .5;
-    transform: translate(2px,-86px);
+    transform: translate(5px,-86px);
 }
