--- a/style.css
+++ b/style.css
@@ -123,9 +123,9 @@ body{
     justify-content: center;
     align-self: center;
     display: none;
-    border: solid;
 }
 .gvideo{
+    opacity: .9;
     height: 100vh;
     width: 100%;
     transform: translate(5px,-92px);
