--- a/qr.css
+++ b/qr.css
@@ -1,174 +1,187 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
 }
+
 ::-webkit-scrollbar {
-    display: none;
-}
-html{
-  width: 100%;
-  overflow-x: hidden;
-  transform: translateY(-40px);
-}
-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #222;
-  cursor: pointer;
+  display: none;
 }
 body {
-  margin: 0 autox;
-  width: 100%;
-  overflow: hidden;
-  background: #444;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-img,button,div{
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none;
-  outline: none;
-
-}
-#qrbox {
-  border-radius: 0.5rem;
-  margin: 0;
   padding: 0;
-  width: 100%;
-  min-height: 100vh;
-  overflow: hidden;
-}
-
-.overlay {
-  position: absolute;
-  top: 0px;
-  left: 0;
-  width: 100%;
+  margin: 0;
+  width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.2);
-}
-.options {
-  color: #333;
-  z-index: 2;
-  position: absolute;
-  top: 45px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
-}
-.options>div{
-  width: fit-content;
-  display: flex;
-  justify-content: flex-end;
-}
-.options>img{
-  width: 10% !important;
-}
-.options img {
-  padding: 5px;
-  cursor: pointer;
-  margin: 5px 1rem;
-  width: 13%;
-  aspect-ratio: 1;
-  z-index: 2;
+  background: rgba(0, 0, 0, 0.8);
+  overflow-y: hidden !important;
 }
 
-#scanqr,
-#copy {
-  width: 50%;
-  margin: 0.5rem 10px;
-  display: flex;
-  align-items: center;
-  justify-self: center;
-  padding: 0 2rem;
-  height: 40px;
-  font-size: 20px;
-  border-radius: 0.5rem;
-  border: none;
-  background: rgb(67, 202, 255);
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+button {
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  border: 1.5px solid #444;
+  background: skyblue;
 }
 
-#flash {
-  border-radius: 4rem;
-}
-#copy {
-  margin: 0.5rem auto;
-}
-#clip {
-  z-index: 2;
-  background: rgba(255, 255, 255, 0.3);
+#close{
+  width: 20px;
   position: absolute;
-  width: 76%;
-  aspect-ratio: 1 / 1;
-  border-radius: 1.5rem;
-  top: 160px;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 10px;
+  left: 10px;
+  z-index: 5;
 }
+
+#qr-reader {
+  padding: 0;
+  margin: 0 auto;
+  width: 100vw;
+  /* background: pink; */
+  /* background: #444; */
+  border: none !important;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+video {
+  -webkit-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+}
+
 #gallery {
   word-break: break-all;
   position: absolute;
-  top: 530px;
+  top: 63vh;
   left: 50%;
   transform: translateX(-50%);
   background: #ffff;
   display: flex;
-  width: 55%;
+  width: fit-content;
   align-items: center;
   justify-content: center;
   border-radius: 2rem;
-  padding: 10px;
+  padding: 18px 50px;
   z-index: 2;
-  font-size: 14px ;
+  font-size: 16px;
   cursor: pointer;
   color: #333;
   min-width: fit-content;
 }
 #gallery > img {
-  width: 10%;
-  margin: 0 3px;
+  width: 20px;
+  margin: 0 6px;
   aspect-ratio: 1 / 1;
 }
-.border{
-  aspect-ratio: 1;
-  z-index: 2;
-  width: 100%;
-  position: absolute;
-  top: 107px;
-  left: 50%;
-  transform: translateX(-50%);
+
+#qr-shaded-region > div:nth-child(1),
+#qr-shaded-region > div:nth-child(2) {
+  top: -30px !important;
+  width: 100px !important;
+  height: 10px !important;
 }
-.border>img{
-  margin: 0 auto;
-  margin-left: 5px;
-  margin-top: 5px;
-  width: 95%;
-  height: 100%;
+#qr-shaded-region > div:nth-child(3),
+#qr-shaded-region > div:nth-child(4) {
+  top: 520px !important;
+  height: 10px !important;
+  width: 100px !important;
+}
+#qr-shaded-region > div:nth-child(6),
+#qr-shaded-region > div:nth-child(5) {
+  left: -20px !important;
+  height: 100px !important;
+  width: 10px !important;
 }
 
-#result {
-  z-index: 2;
-  user-select: text;
-  -webkit-user-select: text; 
-  -ms-user-select: text; 
-  min-width: 300px;
-  width: 95%;
-  margin: 10px auto;
-  background-color: pink;
-  color: #222;
-  padding: 10px;
-  border-radius: 1rem;
-  font-size: 12px;
-  word-break: break-all;
+#qr-shaded-region > div:nth-child(7),
+#qr-shaded-region > div:nth-child(8) {
+  right: -30px !important;
+  height: 100px !important;
+  width: 10px !important;
+}
+
+#qr-shaded-region > div:nth-child(6),
+#qr-shaded-region > div:nth-child(8) {
+  top: 430px !important;
+  border-radius: 8px 8px 0 0;
+}
+
+#qr-shaded-region > div:nth-child(5),
+#qr-shaded-region > div:nth-child(7) {
+  top: -30px !important;
+  border-radius: 0 0 8px 8px;
+}
+
+#qr-shaded-region > div:nth-child(6),
+#qr-shaded-region > div:nth-child(5) {
+  left: -30px !important;
+}
+
+#qr-shaded-region > div:nth-child(1),
+#qr-shaded-region > div:nth-child(3) {
+  left: -20px !important;
+}
+
+#qr-shaded-region > div:nth-child(4),
+#qr-shaded-region > div:nth-child(2) {
+  right: -20px !important;
+}
+
+#qr-shaded-region > div:nth-child(1),
+#qr-shaded-region > div:nth-child(3) {
+  border-radius: 0px 8px 8px 0px;
+}
+
+#qr-shaded-region > div:nth-child(2),
+#qr-shaded-region > div:nth-child(4) {
+  border-radius: 8px 0 0 8px;
+}
+
+#qr-shaded-region > div:nth-child(1) {
+  background: #ea4335 !important;
+}
+
+#qr-shaded-region > div:nth-child(5) {
+  background: #ea4335 !important;
+  border-top-left-radius: 8px;
+}
+#qr-shaded-region > div:nth-child(6) {
+  background: #4285f4 !important;
+  border-bottom-left-radius: 8px;
+}
+#qr-shaded-region > div:nth-child(3) {
+  background: #4285f4 !important;
+}
+#qr-shaded-region > div:nth-child(7) {
+  background: #fbbc05 !important;
+  border-top-right-radius: 8px;
+}
+#qr-shaded-region > div:nth-child(2) {
+  background: #fbbc05 !important;
+}
+#qr-shaded-region > div:nth-child(8) {
+  background: #34a853 !important;
+  border-bottom-right-radius: 8px;
+}
+#qr-shaded-region > div:nth-child(4) {
+  background: #34a853 !important;
+}
+
+span:nth-child(2) > button:nth-child(2) {
+  opacity: 0 !important;
+}
+
+span:nth-child(2) > button:nth-child(1) {
+  opacity: 0 !important;
+}
+
+#qr-reader img,
+#qr-reader__dashboard_section_fsr > span,
+#qr-reader__filescan_input,
+#qr-reader__header_message,
+#qr-reader__dashboard_section_swaplink
+ {
+  opacity: 0 !important;
 }
