--- a/qr.css
+++ b/qr.css
@@ -14,50 +14,93 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.7);
   overflow-y: hidden !important;
+}
+#overlay{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+input,button{
+  z-index: 999 !important;
 }
 
 button {
   padding: 1rem 2rem;
   border-radius: 2rem;
   border: 1.5px solid #444;
-  background: skyblue;
+  cursor: pointer;
+}
+
+#qr-reader__camera_permission_button{
+ cursor: pointer;
 }
 
 #close{
-  width: 20px;
+  width: 38px;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 32vh;
+  left: 20px;
   z-index: 5;
+}
+
+#close>img{
+ cursor: pointer;
+ width: 100%;
+ height: 100%;
 }
 
 #qr-reader {
   padding: 0;
   margin: 0 auto;
   width: 100vw;
-  /* background: pink; */
-  /* background: #444; */
   border: none !important;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
-
-video {
-  -webkit-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-  transform: scale(-1, 1);
+#border{
+  width: 80%;
+  aspect-ratio: 1;
+  position: absolute;
+  top: 48.5%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
 }
+#bimg{
+  transform: translateX(-7px);
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+#roundB{
+  width: 50vw;
+  box-sizing: initial;
+  aspect-ratio: 1;
+  position: absolute;
+  border: solid 2000px rgba(0, 0, 0, 0.314);
+}
+
 
 #gallery {
   word-break: break-all;
   position: absolute;
-  top: 63vh;
+  top: 70vh;
   left: 50%;
   transform: translateX(-50%);
-  background: #ffff;
+  background: rgba(255, 255, 255, 0.9);
   display: flex;
   width: fit-content;
   align-items: center;
@@ -75,7 +118,9 @@ video {
   margin: 0 6px;
   aspect-ratio: 1 / 1;
 }
-
+#qr-shaded-region {
+  visibility: hidden;
+}
 #qr-shaded-region > div:nth-child(1),
 #qr-shaded-region > div:nth-child(2) {
   top: -30px !important;
