--- a/qr.css
+++ b/qr.css
@@ -25,11 +25,9 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
+  pointer-events: none;
 }
 
-input,button{
-  z-index: 999 !important;
-}
 
 button {
   padding: 1rem 2rem;
@@ -78,14 +76,17 @@ button {
   align-items: center;
   justify-content: center;
   z-index: -1;
+  pointer-events: none;
 }
 #bimg{
   transform: translateX(-7px);
   display: block;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 #roundB{
+  pointer-events: none;
   width: 50vw;
   box-sizing: initial;
   aspect-ratio: 1;
@@ -106,15 +107,15 @@ button {
   align-items: center;
   justify-content: center;
   border-radius: 2rem;
-  padding: 18px 50px;
+  padding: 20px 55px;
   z-index: 2;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
   color: #333;
   min-width: fit-content;
 }
 #gallery > img {
-  width: 20px;
+  width: 23px;
   margin: 0 6px;
   aspect-ratio: 1 / 1;
 }
