--- a/qr.css
+++ b/qr.css
@@ -18,7 +18,7 @@ body {
   overflow-y: hidden !important;
   transform: translateY(-20vh);
 }
-#overlay{
+#overlay {
   width: 100vw;
   height: 120vh;
   overflow: hidden;
@@ -29,7 +29,6 @@ body {
   pointer-events: none;
 }
 
-
 button {
   padding: 1rem 2rem;
   border-radius: 2rem;
@@ -37,22 +36,23 @@ button {
   cursor: pointer;
 }
 
-#qr-reader__camera_permission_button{
- cursor: pointer;
+#qr-reader__camera_permission_button {
+  cursor: pointer;
 }
 
-#close{
-  width: 60px;
+#close {
+  width: 35px;
   position: absolute;
   top: 32vh;
-  left: 25px;
+  left: 10px;
   z-index: 5;
 }
 
-#close>img{
- cursor: pointer;
- width: 100%;
- height: 100%;
+#close img {
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
 }
 
 #qr-reader {
@@ -64,13 +64,13 @@ button {
   top: 50%;
   transform: translateY(-50%);
 }
-#border{
+#border {
   width: 80%;
   aspect-ratio: 1;
   position: absolute;
   top: 48.5%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   margin: 0;
   padding: 0;
   display: flex;
@@ -79,14 +79,14 @@ button {
   z-index: -1;
   pointer-events: none;
 }
-#bimg{
+#bimg {
   transform: translateX(-7px);
   display: block;
   width: 100%;
   height: 100%;
   pointer-events: none;
 }
-#roundB{
+#roundB {
   pointer-events: none;
   width: 60vw;
   box-sizing: initial;
@@ -98,54 +98,50 @@ button {
 #gallery {
   word-break: break-all;
   position: absolute;
-  top: 80vh;
+  top: 85vh;
   left: 50%;
   transform: translateX(-50%);
   background: rgba(255, 255, 255, 0.9);
   display: flex;
-  width: 50%;
-  height: 5rem;
+  width: fit-content;
   align-items: center;
   justify-content: center;
   border-radius: 3rem;
-  padding: 10px;
+  padding: 15px 20px;
   z-index: 2;
-  font-size: 28px;
+  font-size: 18px;
   cursor: pointer;
   color: #333;
   min-width: fit-content;
 }
 #gallery > img {
-  width: 30px;
+  width: 25px;
   margin: 0 10px;
   aspect-ratio: 1 / 1;
 }
 #qr-shaded-region {
   visibility: hidden;
 }
- 
 span:nth-child(2) > button:nth-child(2) {
-  /* opacity: 0 !important; */
+  opacity: 0 !important;
 }
-
 span:nth-child(2) > button:nth-child(1) {
-  /* opacity: 0 !important; */
+  opacity: 0 !important;
 }
-
 #qr-reader img,
 #qr-reader__dashboard_section_fsr > span,
 #qr-reader__filescan_input,
 #qr-reader__header_message,
-#qr-reader__dashboard_section_swaplink
- {
-  /* opacity: 0 !important; */
+#qr-reader__dashboard_section_swaplink {
+  opacity: 0 !important;
 }
 
-#qr-reader__camera_permission_button{
-  /* visibility: hidden; */
+#qr-reader__camera_permission_button,
+#qr-reader__dashboard_section_csr {
+  visibility: hidden;
 }
 
-#qr-reader__camera_selection{
+#qr-reader__camera_selection {
   width: 50%;
   height: 90px;
   position: absolute;
@@ -154,6 +150,6 @@ span:nth-child(2) > button:nth-child(1) {
   font-size: 30px;
   border-radius: 3rem;
   padding: 20px;
-  opacity: .9;
+  opacity: 0.9;
   outline: none;
 }
