--- a/qr.css
+++ b/qr.css
@@ -41,10 +41,10 @@ button {
 }
 
 #close {
-  width: 35px;
+  width: 30px;
   position: absolute;
-  top: 32vh;
-  left: 10px;
+  top: 12px;
+  left: 12px;
   z-index: 5;
 }
 
@@ -98,7 +98,7 @@ button {
 #gallery {
   word-break: break-all;
   position: absolute;
-  top: 85vh;
+  top: 88vh;
   left: 50%;
   transform: translateX(-50%);
   background: rgba(255, 255, 255, 0.9);
@@ -109,14 +109,14 @@ button {
   border-radius: 3rem;
   padding: 15px 20px;
   z-index: 2;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
   color: #333;
   min-width: fit-content;
 }
 #gallery > img {
-  width: 25px;
-  margin: 0 10px;
+  width: 23px;
+  margin: 0 8px;
   aspect-ratio: 1 / 1;
 }
 #qr-shaded-region {
