--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: "Radio Canada", sans-serif;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 
 button {
   cursor: pointer;
@@ -13,6 +16,15 @@ button {
 a{
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 /* ---------------------Home---------------------------- */
@@ -23,6 +35,7 @@ a{
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 .home-page input {
@@ -31,7 +44,7 @@ a{
   border: 1.5px solid rgb(128, 128, 128);
   border-radius: 2rem;
   height: 2.5rem;
-  font-size: 22px;
+  font-size: 20px;
   color: rgb(79, 79, 79);
   padding: 2rem;
   text-align: center;
@@ -40,7 +53,7 @@ a{
 
 .home-page button {
   border: none;
-  width: 120px;
+  width: 180px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,23 +61,15 @@ a{
   background: #2a81f4;
   color: #fff;
   border-radius: 2rem;
-  padding: 10px 15px;
-  font-size: 25px;
+  padding: 8px 15px;
+  font-size: 23px;
   outline: none;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100%;
-}
 
 .page {
   display: none;
 }
-
 
 .circle {
   width: 100%;
