--- a/qr.css
+++ b/qr.css
@@ -154,3 +154,37 @@ span:nth-child(2) > button:nth-child(1) {
   opacity: 0.9;
   outline: none;
 }
+
+#footer{
+  position: absolute;
+  bottom: 2.6rem;
+  left: 1px;
+  width: calc(100% - 2px);
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 1.6rem 1.6rem 0 0;
+  background: #323336;
+  border: 1px rgb(116, 116, 116) solid;
+  z-index: 9;
+}
+.footer-item{
+  color: #fff;
+  font-size: 20px;
+  height: 44%;
+  display: flex;
+  align-items: center;
+  opacity: .8;
+}
+.footer-item:nth-child(1){
+  color: red;
+}
+.line{
+  border-radius: 1rem;
+  background: #fff;
+  margin: 10px;
+  width: 50px;
+  height: 4px;
+}
