--- a/qr.css
+++ b/qr.css
@@ -168,6 +168,7 @@ span:nth-child(2) > button:nth-child(1) {
   border-radius: 1.6rem 1.6rem 0 0;
   background: #323336;
   border: 1px rgb(116, 116, 116) solid;
+  border-bottom: none;
   z-index: 9;
 }
 .footer-item{
