--- a/qr.css
+++ b/qr.css
@@ -116,6 +116,7 @@ button {
   color: #333;
   min-width: fit-content;
   opacity: 0;
+  user-select: none;
 }
 #gallery > img {
   width: 20px;
@@ -172,7 +173,7 @@ span:nth-child(2) > button:nth-child(1) {
   justify-content: center;
   border-radius: 1.6rem 1.6rem 0 0;
   background: #323336;
-  border: 1px rgb(116, 116, 116) solid;
+  border: 1px rgba(116, 116, 116, 0.9) solid;
   border-bottom: none;
   z-index: 9;
 }
@@ -193,4 +194,14 @@ span:nth-child(2) > button:nth-child(1) {
   margin: 10px;
   width: 50px;
   height: 4px;
+}
+
+#bottom{
+  height: 400px;
+  width: 100%;
+  background: #323336;
+  position: absolute;
+  left: 0;
+  bottom: -330px;
+  z-index: -1;
 }
